experimental/parser/testdata/lexer/encoding/utf8-invalid.proto.stderr.txt
error: input appears to be encoded with UTF-8, but found invalid byte
  --> testdata/lexer/encoding/utf8-invalid.proto:15:11
   |
15 | syntax = "<FF>";
   |           ^^^^
   = note: non-UTF-8 byte occurs at offset 616 (0x268)
   = note: Protobuf files must be UTF-8 encoded

encountered 1 error
